--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,8 @@
   <groupId>com.web</groupId>
   <artifactId>web_app</artifactId>
   <version>1.0-SNAPSHOT</version>
+  <packaging>war</packaging>
+	<url>http://maven.apache.org</url>
 
   <name>web_app</name>
   <!-- FIXME change it to the project's website -->
